syntax = "proto3";

package auth;
option go_package = "login_api/internal/common/genproto/auth/api/protobuf;authv1";



message Error{
  string error_info = 1;
}


message LoginRequest {
  PhoneNumber phone_number  = 1;
}
message LoginResponse{
  string message = 1;
  string user_id = 2;
}

message SignUpResponse {
  string phone_number  = 1;
  string created_at = 2;
  bool is_verfied = 3;
  string user_id = 4;
  
}

message UserProfile {
  string phone_number  = 1;
  string created_at = 2;
  string verfied_at = 3;
  
}


message Response {
  string message = 1;
  Error error = 2;
}



message PhoneNumber {
  string number = 1;
}

message VerifyAccountRequest {
  string user_id = 1;
  string code = 2;
}
message VerifyAccountResponse {
  string message = 1;
  
}
message OTP {
  string code = 1;
}
service AuthService {
  rpc SignupWithPhoneNumber(PhoneNumber) returns (SignUpResponse) {}
  rpc VerifyAccount(VerifyAccountRequest) returns (VerifyAccountResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc OTPGenerate(PhoneNumber) returns (Response) {}
  rpc GetProfile(PhoneNumber) returns (UserProfile) {}
}